# KCTF-jr-2025

./: .gitignore  README.md
CRYPTO/: docker-compose.yml
CRYPTO/LOV3/private/: Dockerfile  flag  prob.py
CRYPTO/LOV3/solver/: solve.py
CRYPTO/PublicEnemy/private/: flag  prob.py
CRYPTO/PublicEnemy/public/: ciphertext.txt
CRYPTO/PublicEnemy/solver/: solve.py
CRYPTO/papillon/private/: prob.py
CRYPTO/papillon/public/: flag.jpg.enc
CRYPTO/papillon/solver/: flag.jpg.enc  solve.py
MISC/Echo_Protocol/private/: Dockerfile  docker-compose.yml  echo_protocol_server.py
MISC/Echo_Protocol/public/: README.md
MISC/Echo_Protocol/solver/: solve.py
MISC/Hidden_In_Stream/private/: .dockerignore  Dockerfile  docker-compose.yml  hidden_stream_server.py  requirements.txt
MISC/Hidden_In_Stream/public/: README.md
MISC/Hidden_In_Stream/solver/: solve.py
MISC/Something DIFFerent/public/: file2.txt  file3.txt
MISC/Something DIFFerent/solver/: solve.py
PWN/: docker-compose.yml
PWN/cigaronne/private/: flag  (+2 more)
REV/Rua_Just_In_Time/private/Rua_Just_In_Time/: Cargo.toml  build.rs
REV/Rua_Just_In_Time/private/Rua_Just_In_Time/scripts/: script.lua
REV/Rua_Just_In_Time/private/Rua_Just_In_Time/src/: main.rs
WEB/inner_html/: docker-compose.yml
WEB/limited_command/: Dockerfile  docker-compose.yml  flag.txt
WEB/obfuscator/: Dockerfile  docker-compose.yml
WEB/배가 gophar/: Dockerfile  docker-compose.yml
programming/Binary_Maze_Runner/: README.md  maze_server_async.py
programming/Pattern_Lock_Decoder/: .dockerignore  Dockerfile  README.md  pattern_server_async.py
(+73 files in other folders)
